--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfony/yaml": "5.4.*",
         "symfonycasts/verify-email-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3.5",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
