--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    images_directory: '%kernel.project_dir%/public/upload_images_project'
+    images_directory: '%kernel.project_dir%/public/image_project'
 services:
     # default configuration for services in *this* file
     _defaults:
