--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.3",
+        "ckeditor4": "^4.21.0",
         "glightbox": "^3.2.0",
         "imagesloaded": "^5.0.0",
         "isotope-layout": "^3.0.6",
