--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,8 @@ services:
             - "@twig"
         tags:
             - { name: "controller.service_arguments" }
+    App\Controller\MessageController:
+        tags: ['controller.service_arguments']
     # default configuration for services in *this* file
     _defaults:
         autowire: true # Automatically injects dependencies in your services.
