--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ services:
             - "@twig"
         tags:
             - { name: "controller.service_arguments" }
-    App\Controller\MessageController:
+    App\Controller\Front\MessageController:
         tags: ['controller.service_arguments']
     # default configuration for services in *this* file
     _defaults:
