--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ webpack.config.js
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/config/jwt/*
 /var/
 /vendor/
 /node_modules/
@@ -29,3 +30,7 @@ webpack.config.js
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
