--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "lcobucci/jwt": "^4.0",
+        "lexik/jwt-authentication-bundle": "^2.18",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.2",
@@ -49,8 +51,7 @@
         "symfonycasts/verify-email-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.5",
-        "twig/twig": "^2.12|^3.0",
-        "symfonycasts/reset-password-bundle": "^1.16"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
