--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,7 +3,7 @@ framework:
     secret: "%env(APP_SECRET)%"
     #csrf_protection: true
     http_method_override: false
-    error_controller: App\Controller\ExceptionController::showException
+    #error_controller: App\Controller\ExceptionController::showException
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
