--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -1,5 +1,5 @@
 lexik_jwt_authentication:
     private_key_path: '%kernel.project_dir%/config/jwt/private.pem'
     public_key_path:  '%kernel.project_dir%/config/jwt/public.pem'
-    pass_phrase:      'Elitegunz12@'
+    pass_phrase:      ''
 
