--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         "symfonycasts/verify-email-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.5",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-intl": "*"
     },
     "config": {
         "allow-plugins": {
