--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "imagesloaded": "^5.0.0",
         "isotope-layout": "^3.0.6",
         "sweetalert2": "^11.7.22",
+        "swiper": "^10.3.1",
         "wowjs": "^1.1.3"
     }
 }
