--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,10 +1,14 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        default_connection: default
+        connections:
+            default:
+                url: '%env(resolve:DATABASE_URL)%'
+                # Configuration de votre première base de données
 
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '14'
+            second_database:
+                url: '%env(resolve:SECOND_DATABASE_URL)%'
+                # Configuration de votre deuxième base de données
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
