--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     images_directory: "%kernel.project_dir%/public/image_project"
-    uploads_directory: "%kernel.project_dir%/public/uploads"
+    uploads_directory: "%kernel.project_dir%/public/uploads/avatar"
 services:
     App\Controller\ExceptionController:
         arguments:
