--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.11.3",
         "ckeditor4": "^4.21.0",
         "glightbox": "^3.2.0",
         "imagesloaded": "^5.0.0",
