wip: production errors fixing + added home maintenance page

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,7 @@
 exception:
   path: /error
   controller: App\Controller\ExceptionController::showException
+
+front_maintenance:
+    path: /
+    controller: App\Controller\Front\MaintenanceController::maintenance
