--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "knplabs/knp-snappy-bundle": "^1.9",
         "lcobucci/jwt": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.18",
