fixed errors login and register + add password multi step form

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,4 +36,5 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/devis/utilisateur, roles: ROLE_USER }
-        - { path: ^/profil, roles: ROLE_USER }
+        - { path: ^/assistance, roles: ROLE_USER }
+        - { path: ^/profil/, roles: ROLE_USER }
