wip: fixing impress estimate

--- a/config/packages/knp_snappy.yaml
+++ b/config/packages/knp_snappy.yaml
@@ -1,4 +1,6 @@
 knp_snappy:
+    temporary_folder: "%kernel.cache_dir%/snappy"
+    process_timeout: 20 # In seconds
     pdf:
         enabled:    true
         binary:     '%env(WKHTMLTOPDF_PATH)%'
