fixed subject + text justify

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,10 +5,6 @@ exception:
   path: /error
   controller: App\Controller\ExceptionController::showException
 
-front_maintenance:
-    path: /
-    controller: App\Controller\Front\MaintenanceController::maintenance
-
-front_devis_set_password:
-  path: /continuer/{email}
-  controller: App\Controller\YourController::setPassword
+#front_maintenance:
+    #path: /
+    #controller: App\Controller\Front\MaintenanceController::maintenance
