--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -58,4 +58,4 @@ when@prod:
             deprecation:
                 type: stream
                 channels: [deprecation]
-                path: php://stderr
+                path: "%kernel.logs_dir%/%kernel.environment%.log"
