--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "knplabs/knp-snappy-bundle": "^1.10",
         "lcobucci/jwt": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.18",
+        "mpdf/mpdf": "^8.2",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^2.0",
         "phpstan/phpdoc-parser": "^1.15",
         "sensio/framework-extra-bundle": "^6.2",
         "slowprog/calendly-api": "^1.0",
