--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -1,14 +1,8 @@
 knpu_oauth2_client:
   clients:
-    # the key "facebook_main" can be anything, it
-    # will create a service: "knpu.oauth2.client.facebook_main"
-    facebook_main:
-      # this will be one of the supported types
-      type: facebook
-      client_id: '%env(OAUTH_FACEBOOK_ID)%'
-      client_secret: '%env(OAUTH_FACEBOOK_SECRET)%'
-      # the route that you're redirected to after
-      # see the controller example below
-      redirect_route: connect_facebook_check
+    github:
+      type: github
+      client_id: '%env(GITHUB_CLIENT_ID)%'
+      client_secret: '%env(GITHUB_CLIENT_SECRET)%'
+      redirect_route: connect_github_check
       redirect_params: {}
-      graph_api_version: v2.12
