--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,40 +1,31 @@
 security:
     hide_user_not_found: false
     enable_authenticator_manager: true
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: Username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            lazy: true
+            #anonymous: true
             provider: app_user_provider
-            custom_authenticator:
-                - App\Security\AppCustomAuthenticator
+            guard:
+                authenticators:
+                    - App\Security\GithubAuthenticator
             logout:
-                path: app_logout
-                # where to redirect after logout
-                #target: front_home
+                path: logout
+                target: /
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/devis/utilisateur, roles: ROLE_USER }
         - { path: ^/assistance, roles: ROLE_USER }
         - { path: ^/profil/, roles: ROLE_USER }
+        - { path: ^/connect/github, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/connect/github/check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
