wip: adding github connect

--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -2,7 +2,8 @@ knpu_oauth2_client:
   clients:
     github:
       type: github
-      client_id: '%env(GITHUB_CLIENT_ID)%'
-      client_secret: '%env(GITHUB_CLIENT_SECRET)%'
-      redirect_route: connect_github_check
-      redirect_params: {}
+      client_id: '%env(GITHUB_ID)%'
+      client_secret: '%env(GITHUB_SECRET)%'
+      redirect_route: oauth_check
+      redirect_params:
+        service: github
