--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
                 authenticators:
                     - App\Security\GithubAuthenticator
             logout:
-                path: logout
+                path: /logout
                 target: /
 
     access_control:
