--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,5 +10,5 @@ front_maintenance:
     controller: App\Controller\Front\MaintenanceController::maintenance
 
 oauth_check:
-  path: /oauth/check
+  path: /oauth/check/{service}
   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
