--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,17 +1,19 @@
 security:
-    hide_user_not_found: false
     enable_authenticator_manager: true
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
     providers:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: Username
+                property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             #anonymous: true
             provider: app_user_provider
