--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -4,5 +4,6 @@ knpu_oauth2_client:
             type: github
             client_id: '%env(OAUTH_GITHUB_CLIENT_ID)%'
             client_secret: '%env(OAUTH_GITHUB_CLIENT_SECRET)%'
-            redirect_route: connect_github_check
-            redirect_params: {}
+            redirect_route: oauth_check
+            redirect_params:
+                service: github
