--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     images_directory: "%kernel.project_dir%/public/image_project"
-    uploads_directory: "%kernel.project_dir%/public/uploads/avatar"
+    uploads_directory: "%kernel.project_dir%/public/uploads/support"
     api_resource_token: "%env(API_RESOURCE_TOKEN)%"
     api_resource_url: "%env(API_RESOURCE_URL)%"
 services:
