--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,23 @@ parameters:
     api_resource_token: "%env(API_RESOURCE_TOKEN)%"
     api_resource_url: "%env(API_RESOURCE_URL)%"
 services:
+    _defaults:
+        autowire: true
+        autoconfigure: true
+
+    Gedmo\Translatable\TranslatableListener:
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
+        calls:
+            - [ setDefaultLocale, ["%kernel.default_locale%"] ]
+            - [ setTranslationFallback, [true] ]
+
+    App\Controller\Front\LocaleController:
+        public: true
+        autowire: true
+        autoconfigure: true
+        tags: ['controller.service_arguments']
+
     App\Controller\ExceptionController:
         arguments:
             - "@twig"
@@ -26,9 +43,6 @@ services:
             - { name: 'security.voter' }
     App\Twig\AppExtension:
         tags: ['twig.extension']
-    _defaults:
-        autowire: true # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
