--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,7 +4,12 @@ framework:
     #csrf_protection: true
     http_method_override: false
     error_controller: App\Controller\ExceptionController::showException
-    default_locale: fr
+    default_locale: en
+    translator:
+        default_path: '%kernel.project_dir%/translations'
+    request:
+        formats:
+            html: ['text/html', 'application/xhtml+xml']
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
